# DSA-Testcases-Repo-Backend

./: .env  Cargo.toml  Rocket.toml
migrations/2019-01-29-192314_create_users_table/: down.sql  up.sql
migrations/2019-01-29-193316_create_testcases_table/: down.sql  up.sql
migrations/2019-01-29-194856_create_submissions_table/: down.sql  up.sql
migrations/2019-02-03-155411_subjects/: up.sql
src/: auth.rs  db_cfg.rs  main.rs  repository.rs  schema.rs
src/database/: impl_crud.rs  mod.rs  model_struct.rs  models.rs  schema.rs  subjects.rs  submissions.rs  testcases.rs  users.rs
src/repository/: mod.rs  subjects.rs  submissions.rs  testcases.rs  users.rs
