[package]
name = "backend"
version = "0.1.0"
authors = ["Farzeen"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_contrib = {version = "0.4",  default-features = false, features = ["json", "diesel_postgres_pool", "uuid"]}

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.4", features = ["postgres", "uuid"]}

dotenv = "0.13"

uuid = "0.6"
md5 = "0.6.1"